--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id = "title">Odin Recipes</div>
     <h2><p><a href="recipes/lasagna.html"> <div id="contents"> Lasagna </div></a></h2></p>
     
-    <img src="\Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\lasicon.jpg" class="image1">
+    <img src="Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\lasicon.jpg" class="image1">
 
-    <img src="\Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\pza.jpg" class="image2">
+    <img src="Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\pza.jpg" class="image2">
     
     <h2><p><a href="recipes/pizza.html"> <div id="contents">Pizza</div></a></p></h2>
 </body>
