--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id = "title">Odin Recipes</div>
     <h2><p><a href="lasagna.html"> <div id="contents"> Lasagna </div></a></h2></p>
     
-    <img src="lasicon.jpg" class="image1">
+    <img src="./lasicon.jpg" class="image1">
 
-    <img src="pza.jpg" class="image2">
+    <img src="./pza.jpg" class="image2">
     
-    <h2><p><a href="pizza.html"> <div id="contents">Pizza</div></a></p></h2>
+    <h2><p><a href="./pizza.html"> <div id="contents">Pizza</div></a></p></h2>
 </body>
 </html>
